Complete Blog Post Page

--- a/SCSS/_articles-sec.scss
+++ b/SCSS/_articles-sec.scss
@@ -213,7 +213,7 @@
     }
 
 }
-.article-details{
+.article-header-details{
     margin-top: 20px;
     display: flex;
     justify-content: center;
