--- a/SCSS/_variables.scss
+++ b/SCSS/_variables.scss
@@ -1,5 +1,5 @@
 // Variables
-$main-color:#1967D2;
+$main-color:rgb(25, 103, 210);
 $main-color-01:#1966d2c7;
 $main-color-02:#1966d291;
 $main-color-03:#1966d257;
